[package]
name = "mb2-display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embedded-graphics = "0.8.1"
rtt-target = "0.4"
st7735-lcd = "0.9.0"

[dependencies.microbit-v2]
git = "https://github.com/BartMassey-upstream/microbit"
branch = "add-spi"

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
